--- a/src/udf/CMakeLists.txt
+++ b/src/udf/CMakeLists.txt
@@ -23,6 +23,7 @@ set(INCLUDE_DIRS
   ${NEKRS_INSTALL_DIR}/include/core
   ${NEKRS_INSTALL_DIR}/include/utils
   ${NEKRS_INSTALL_DIR}/include/timeStepper
+  ${NEKRS_INSTALL_DIR}/include/bdry
   ${NEKRS_INSTALL_DIR}/include/udf
   ${NEKRS_INSTALL_DIR}/include/navierStokes
   ${NEKRS_INSTALL_DIR}/include/solvers/cvode
