--- a/3rd_party/hypre/src/config/HYPRE_config.h.in
+++ b/3rd_party/hypre/src/config/HYPRE_config.h.in
@@ -173,7 +173,7 @@
 #undef HYPRE_USING_CUSPARSE
 
 /* Define to 1 if using device async malloc */
-#undef HYPRE_USING_DEVICE_MALLOC_ASYNC
+#define HYPRE_USING_DEVICE_MALLOC_ASYNC
 
 /* Define to 1 if using device memory without UM */
 #undef HYPRE_USING_DEVICE_MEMORY
