fix build issue if HYPRE_GPU is false + fix coarse grid solve + GPU

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -240,7 +240,7 @@ target_link_libraries(nekrs-lib PUBLIC libocca OpenMP::OpenMP_CXX PRIVATE gs ${G
 
 target_compile_definitions(nekrs-lib PUBLIC
     -DDOGS="${CMAKE_INSTALL_PREFIX}/gatherScatter"
-    -DHYPRE)
+)
 
 target_include_directories(nekrs-lib 
   PUBLIC 
@@ -281,11 +281,7 @@ if(ENABLE_AMGX AND ENABLE_CUDA)
   target_include_directories(nekrs-lib PUBLIC 3rd_party/AMGX/base/include 3rd_party/AMGX/core/include)
 endif()
 
-target_link_libraries(nekrs-lib PUBLIC nekrs-hypre)
-
-if(ENABLE_HYPRE_GPU AND ENABLE_CUDA)
-  target_link_libraries(nekrs-lib PUBLIC nekrs-hypre-device)
-endif()
+target_link_libraries(nekrs-lib PRIVATE nekrs-hypre nekrs-hypre-device)
 
 add_executable(nekrs-bin src/main.cpp)
 target_include_directories(nekrs-bin PRIVATE src/lib)
@@ -324,8 +320,8 @@ configure_file(
   ${CMAKE_INSTALL_PREFIX}/nekrs.conf
   @ONLY)
 
-#install nekRS
-install(TARGETS nekrs-lib nekrs-bin axhelm-bin advsub-bin fdm-bin nekrs-hypre nekrs-hypre-device
+install(
+  TARGETS nekrs-lib nekrs-bin axhelm-bin advsub-bin fdm-bin nekrs-hypre nekrs-hypre-device 
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
