Add cvode back to build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ endif()
 # Build CVODE
 ###############################################################################
 
-#add_subdirectory(3rd_party/cvode)
+add_subdirectory(3rd_party/cvode)
 
 ###############################################################################
 # Build HYPRE
