--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,7 +300,17 @@ if(ENABLE_AMGX AND ENABLE_CUDA)
   target_include_directories(nekrs-lib PUBLIC 3rd_party/AMGX/base/include 3rd_party/AMGX/core/include)
 endif()
 
-#target_link_libraries(nekrs-lib PRIVATE SUNDIALS::cvode_shared SUNDIALS::nveccuda_shared)
+target_link_libraries(nekrs-lib PRIVATE SUNDIALS::cvode_shared SUNDIALS::nvecmpiplusx_shared SUNDIALS::nvecserial_shared)
+
+if(ENABLE_CUDA)
+  target_link_libraries(nekrs-lib PRIVATE SUNDIALS::nveccuda_shared)
+endif()
+
+if(ENABLE_HIP)
+  target_link_libraries(nekrs-lib PRIVATE SUNDIALS::nvechip_shared)
+endif()
+
+target_include_directories(nekrs-lib PUBLIC 3rd_party/cvode/include)
 
 add_executable(nekrs-bin src/main.cpp)
 target_include_directories(nekrs-bin PRIVATE src/lib)
