Fix compilation issues. Add cvode as a valid par section.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -318,13 +318,18 @@ if(ENABLE_AMGX AND ENABLE_CUDA)
 endif()
 
 if (ENABLE_SUNDIALS)
-  target_link_libraries (nekrs-bin PRIVATE SUNDIALS::cvode_shared SUNDIALS::nvecmpiplusx_shared SUNDIALS::nvecserial_shared)
+  target_link_libraries (nekrs-lib PRIVATE SUNDIALS::cvode_shared SUNDIALS::nvecmpiplusx_shared SUNDIALS::nvecserial_shared)
+  target_compile_definitions(nekrs-lib PUBLIC -DENABLE_CVODE)
   if (ENABLE_CUDA)
-    target_link_libraries (nekrs-bin PRIVATE SUNDIALS::nveccuda_shared)
+    find_package(CUDA REQUIRED)
+    target_include_directories(nekrs-lib PRIVATE ${CUDA_INCLUDE_DIRS})
+    target_link_libraries (nekrs-lib PRIVATE SUNDIALS::nveccuda_shared)
     add_definitions(-DENABLE_CUDA)
   endif()
   if (ENABLE_HIP)
-    target_link_libraries (nekrs-bin PRIVATE SUNDIALS::nvechip_shared)
+    find_package(HIP REQUIRED)
+    target_include_directories(nekrs-lib PRIVATE ${HIP_INCLUDE_DIRS})
+    target_link_libraries (nekrs-lib PRIVATE SUNDIALS::nvechip_shared)
     add_definitions(-DENABLE_HIP)
   endif()
 endif()
