--- a/3rd_party/hypre/src/CMakeLists.txt
+++ b/3rd_party/hypre/src/CMakeLists.txt
@@ -114,6 +114,7 @@ option(HYPRE_ENABLE_DEVICE_POOL      "Use device memory pool" OFF)
 option(HYPRE_ENABLE_CUBLAS           "Use cuBLAS" OFF)
 option(HYPRE_ENABLE_CURAND           "Use cuRAND" ON)
 option(HYPRE_ENABLE_GPU_PROFILING    "Use NVTX on CUDA" OFF)
+option(HYPRE_ENABLE_DEVICE_MALLOC_ASYNC "Use memory pool" OFF)
 set(HYPRE_CUDA_SM "70" CACHE STRING  "Target CUDA architecture.")
 # oneAPI options
 option(HYPRE_ENABLE_ONEMKLSPARSE     "Use oneMKL sparse" ON)
@@ -243,8 +244,10 @@ if (HYPRE_WITH_CUDA)
     endif ()
 
     set(CMAKE_CUDA_STANDARD_REQUIRED ON CACHE BOOL "" FORCE)
+    if (HYPRE_ENABLE_DEVICE_MALLOC_ASYNC)
+      set(HYPRE_USING_DEVICE_MALLOC_ASYNC ON CACHE BOOL "" FORCE)
+    endif ()
 
-    set(HYPRE_USING_DEVICE_MALLOC_ASYNC ON CACHE BOOL "" FORCE)
     set(HYPRE_USING_CUDA ON CACHE BOOL "" FORCE)
     set(HYPRE_USING_GPU ON CACHE BOOL "" FORCE)
 
